# WIND

./: .gitignore  LICENSE  On optimization benchmark.md  README.md  experiment.example.json  pyproject.toml  requirements.txt  requirments.txt  test.ipynb
.github/workflows/: lint.yml  test.yml
KDD_paper_first_submission/: core.py  experiment.py  metrics.py
KDD_paper_first_submission/results/: Visualization for exp.py
docs/: testing.md
results/: README.md
scripts/analysis/: visualize_experiment.py
src/: Benchmark Test Suite.md  __init__.py  benchmark.py  cli.py  core.py  experiment.py  gym_env.py  manifold.py  metrics.py  oracle.py  test_algorithms.py  visualization.py
sthrd_benchmark/: Benchmark Test Suite.md  Test.md  __init__.py  benchmark.py  core.py  drift.py  environment.py  experiment.py  landscape.py  metrics.py  noise.py  oracle.py  test_algorithms.py  visualization.py
tests/: test_algorithms.py  test_basic.py  test_gym_env.py  test_stiefel.py
